	* Install Tool: Added "cache_imagesizes" to list of tables that can be cleared
	* !!! Indexed Search: Removed all options for indexing OpenOffice.org/OpenDocument files and replaced them with the above "unzip" option. Affected options are: nativeOOMethod, OOoExtract, ruby
	* !!! Indexed Search: Changed all default paths from /usr/local/bin/ to /usr/bin/

2006-02-15  Rene Fritz  <r.fritz@colorcube.de>

	* Added hook to element browser to make it possible to render own EB's. All EB classes are moved into an own file.
	* Added the possiblity to set TCEForm items to read-only.

2006-02-14 Karsten Dambekalns <karsten@typo3.org>

	* typo3/mod/tools/em: Fixed/enhanced dependency checking in the new EM.

2006-02-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (see details in local ChangeLog)

2006-02-14  Rene Fritz  <r.fritz@colorcube.de>

	* Moved t3lib/gfx/ to typo3/gfx/
	* Changed all references of t3lib/gfx/ to gfx/ or typo3/gfx/
	* Made some FE references to media/...
	* Added index.php, showpic.php and thumbs.php scripts
	* All thoese changes were made to make it possible to use the TYPO3 source without symlinks
	* !!! As a consequence of this, the symlinks "arial.ttf" and "verdana.ttf" in t3lib/fonts/ have been removed completely. Please make sure that you have updated your TypoScript template accordingly. You can either upload the original fonts to the server or use a similar looking font instead (nimbus.ttf instead of arial.ttf, vera.ttf instead of verdana.ttf - both are located in t3lib/fonts/).

2006-02-14  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Fixed part II of the versioning swapping change: Now versioning is completely independent of MySQL versions and it is fully DBAL compliant: Records are swapping content rather than ids (locking file support integrated which stores swapped records in case something goes wrong - however, no tool for reverting using this lock file...)